--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>ToDo List</title>
 </head>
 <body>
     <div id="app" class="container">
-        <div class="logo"></div>
+        <div class="new-task">
+            <input type="text" placeholder="Nuova task">
+            <button>Aggiungi</button>
+
+        </div>
+
+        <div class="tasks-container">
+            <ul>
+                <li class="task">
+                    testo del task
+                    <i class="fas fa-times"></i>
+                </li>
+
+            </ul>
+        </div>
+
 
 
 
@@ -17,6 +33,8 @@
 
 
     </div>
+
+    
     
     <script src="https://unpkg.com/vue@3"></script>
     <script src="js/main.js"></script>
